--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,7 +18,8 @@
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-i18next": "^14.1.3"
+    "react-i18next": "^14.1.3",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@community-app/eslint-config": "workspace:*",
