feat: prepare magic link persistence adapters

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,9 @@ SEARCH_URL=https://meilisearch.local
 REDIS_URL=redis://localhost:6379
 QUEUE_URL=
 AWS_REGION=us-west-1
+SUPABASE_URL=
+SUPABASE_SERVICE_ROLE_KEY=
+RESEND_API_KEY=
 
 # Analytics & monitoring
 POSTHOG_API_KEY=
