--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "@community-app/ui": "workspace:*",
+    "@supabase/supabase-js": "^2.57.4",
     "clsx": "^2.1.0",
     "i18next": "^23.10.1",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3",
+    "resend": "^6.1.0",
     "zod": "^4.1.9"
   },
   "devDependencies": {
