feat: add session cookies and onboarding checklist stub

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_DEFAULT_LOCALE=ko
 EMAIL_DOMAIN_WHITELIST=berkeley.edu
-MAGIC_LINK_SECRET=
+MAGIC_LINK_SECRET=change-me-super-secret
 DATABASE_URL=postgres://user:password@localhost:5432/community_app
 SEARCH_URL=https://meilisearch.local
 REDIS_URL=redis://localhost:6379
