--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "@supabase/supabase-js": "^2.57.4",
     "clsx": "^2.1.0",
     "i18next": "^23.10.1",
+    "jose": "^6.1.0",
     "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
