feat: wire posthog analytics and checklist page

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # Core application configuration
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 NEXT_PUBLIC_DEFAULT_LOCALE=ko
+NEXT_PUBLIC_POSTHOG_KEY=
+NEXT_PUBLIC_POSTHOG_HOST=
 EMAIL_DOMAIN_WHITELIST=berkeley.edu
 MAGIC_LINK_SECRET=change-me-super-secret
 DATABASE_URL=postgres://user:password@localhost:5432/community_app
@@ -14,4 +16,5 @@ RESEND_API_KEY=
 
 # Analytics & monitoring
 POSTHOG_API_KEY=
+POSTHOG_HOST=https://eu.posthog.com
 SENTRY_DSN=
