--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,8 @@
     "i18next": "^23.10.1",
     "jose": "^6.1.0",
     "next": "^14.2.5",
+    "posthog-js": "^1.266.2",
+    "posthog-node": "^5.8.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^14.1.3",
