feat: allow checklist status updates and admin template edits

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,7 @@ AWS_REGION=us-west-1
 SUPABASE_URL=
 SUPABASE_SERVICE_ROLE_KEY=
 RESEND_API_KEY=
+ADMIN_EMAILS=admin@berkeley.edu
 
 # Analytics & monitoring
 POSTHOG_API_KEY=
